--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     image: postgres:14
     container_name: app_provedor_postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app_provedor_db}
-      POSTGRES_USER: ${POSTGRES_USER:-app_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-E0sJT3wAYFuahovmHkxgy}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - app-provedor-db-data:/var/lib/postgresql/data
     networks:
@@ -20,9 +20,9 @@ services:
           - app_provedor_postgres
           - postgres
     ports:
-      - "5433:5432" # Porta 5433 para não conflitar com outros bancos
+      - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-app_user} -d ${POSTGRES_DB:-app_provedor_db}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -32,7 +32,7 @@ services:
   # 🌐 BACKEND DJANGO (Painel + APIs)
   # ===============================
   app-provedor-backend:
-    image: ghcr.io/juniorssilvaa/app-provedor-backend:latest
+    image: ghcr.io/juniorssilvaa/app_provedor-backend:latest
     container_name: app_provedor_backend
     depends_on:
       - postgres
@@ -41,11 +41,13 @@ services:
     volumes:
       - app-provedor-media:/app/media
       - app-provedor-static:/app/staticfiles
+      - ./firebase-credentials.json:/app/firebase-credentials.json
     environment:
-      SECRET_KEY: ${SECRET_KEY:-django-insecure-prod-key}
-      DEBUG: ${DEBUG:-false}
-      DATABASE_URL: postgresql://${POSTGRES_USER:-app_user}:${POSTGRES_PASSWORD:-E0sJT3wAYFuahovmHkxgy}@postgres:5432/${POSTGRES_DB:-app_provedor_db}
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
+      FIREBASE_CREDENTIALS: /app/firebase-credentials.json
     command: gunicorn niochat.wsgi:application --bind 0.0.0.0:8000 --workers 3
     labels:
       - "traefik.enable=true"
@@ -65,12 +67,14 @@ services:
   # 📱 WEBHOOK SERVER (FastAPI)
   # ===============================
   app-provedor-webhook:
-    image: ghcr.io/juniorssilvaa/app-provedor-webhook:latest
+    image: ghcr.io/juniorssilvaa/app_provedor-webhook:latest
     container_name: app_provedor_webhook
     depends_on:
       - app-provedor-backend
     networks:
       - nioNet
+    volumes:
+      - ./firebase-credentials.json:/app/firebase-credentials.json
     environment:
       FIREBASE_CREDENTIALS: /app/firebase-credentials.json
     command: uvicorn webhook_server:app --host 0.0.0.0 --port 8001
