--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     image: postgres:14
     container_name: app_provedor_postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-app_provedor_db}
+      POSTGRES_USER: ${POSTGRES_USER:-app_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-SOMxcet2sQT5oJHFhUBStA}
     volumes:
       - app-provedor-db-data:/var/lib/postgresql/data
     networks:
@@ -22,7 +22,7 @@ services:
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -43,9 +43,9 @@ services:
       - app-provedor-static:/app/staticfiles
       - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
     environment:
-      SECRET_KEY: ${SECRET_KEY}
-      DEBUG: ${DEBUG}
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      SECRET_KEY: ${SECRET_KEY:-acK0Z6lOzI_g0tQhb_Ir9bisTC8dZQrTaoIPgBpmjqRzye1XaVsPBXgF2LbhkkbPPAU}
+      DEBUG: ${DEBUG:-false}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-app_user}:${POSTGRES_PASSWORD:-SOMxcet2sQT5oJHFhUBStA}@postgres:5432/${POSTGRES_DB:-app_provedor_db}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
       FIREBASE_CREDENTIALS: /app/service_account_key.json
     command: gunicorn niochat.wsgi:application --bind 0.0.0.0:8000 --workers 3
