fix(ci): update portainer url

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Deploy to Portainer
         env:
-          PORTAINER_URL: https://portainer.niochat.com.br
+          PORTAINER_URL: https://app-provedor.niochat.com.br
           PORTAINER_API_KEY: ${{ secrets.PORTAINER_API_KEY }}
           BACKEND_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest
           WEBHOOK_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-webhook:latest
