feat: Adiciona funcionalidades de notificaÃ§Ãµes agendadas, templates, webhook customizado e melhorias
- Adiciona sistema de templates de notificaÃ§Ãµes push
- Implementa notificaÃ§Ãµes agendadas com processamento automÃ¡tico
- Adiciona campo webhook_url customizado no Provider
- Melhora tratamento de tokens FCM invÃ¡lidos
- Corrige erros de Unicode no comando process_scheduled_notifications
- Adiciona coluna ID na tabela de provedores
- Adiciona serviÃ§o scheduler no docker-compose para processar notificaÃ§Ãµes agendadas
- Melhora interface de integraÃ§Ã£o SGP com URL editÃ¡vel e salvamento automÃ¡tico
- Adiciona endpoint para atualizar URL do webhook
- Melhora lÃ³gica de status de notificaÃ§Ãµes agendadas

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ db.sqlite3
 media/
 .env
 .DS_Store
+react_native_space/android/app/.cxx/
+react_native_space/android/app/build/
+react_native_space/node_modules/
+*.log
