--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,5 @@ djangorestframework>=3.15.2
 django-cors-headers>=4.4.0
 google-generativeai>=0.8.5
 google-genai>=0.3.0
+dj-database-url>=2.1.0
+whitenoise>=6.6.0
