--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,13 +47,13 @@ services:
     volumes:
       - app-provedor-media:/app/media
       - app-provedor-static:/app/staticfiles
-      # - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
+      - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
     environment:
       SECRET_KEY: ${SECRET_KEY:-acK0Z6lOzI_g0tQhb_Ir9bisTC8dZQrTaoIPgBpmjqRzye1XaVsPBXgF2LbhkkbPPAU}
       DEBUG: ${DEBUG:-false}
       DATABASE_URL: postgresql://${POSTGRES_USER:-app_user}:${POSTGRES_PASSWORD:-SOMxcet2sQT5oJHFhUBStA}@postgres:5432/${POSTGRES_DB:-app_provedor_db}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
-      # FIREBASE_CREDENTIALS: /app/service_account_key.json
+      FIREBASE_CREDENTIALS: /app/service_account_key.json
     command: gunicorn niochat.wsgi:application --bind 0.0.0.0:8000 --workers 2
     restart: always
     deploy:
@@ -83,9 +83,9 @@ services:
     networks:
       - appNet
     volumes:
-      # - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
+      - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
     environment:
-      # FIREBASE_CREDENTIALS: /app/service_account_key.json
+      FIREBASE_CREDENTIALS: /app/service_account_key.json
     command: uvicorn webhook_server:app --host 0.0.0.0 --port 8001
     restart: always
     deploy:
