--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   # 🌐 BACKEND DJANGO (Painel + APIs)
   # ===============================
   app-provedor-backend:
-    image: ghcr.io/juniorssilvaa/app_provedor-backend:latest
+    image: ghcr.io/juniorssilvaa/app_provedor-backend:${IMAGE_TAG:-latest}
     depends_on:
       - postgres
     networks:
@@ -67,7 +67,7 @@ services:
     labels:
       - "traefik.enable=true"
       # Rota unificada para Painel, APIs e Webhooks
-      - "traefik.http.routers.app-provedor-backend.rule=Host(`painel.niochat.com.br`) || Host(`apis.niochat.com.br`) || Host(`webhooks.niochat.com.br`)"
+      - "traefik.http.routers.app-provedor-backend.rule=Host(`painel.niochat.com.br`) || Host(`apis.niochat.com.br`)"
       - "traefik.http.routers.app-provedor-backend.entrypoints=websecure"
       - "traefik.http.routers.app-provedor-backend.tls.certresolver=letsencryptresolver"
       - "traefik.http.routers.app-provedor-backend.priority=10"
@@ -77,7 +77,7 @@ services:
   # 📱 WEBHOOK SERVER (FastAPI)
   # ===============================
   app-provedor-webhook:
-    image: ghcr.io/juniorssilvaa/app_provedor-webhook:latest
+    image: ghcr.io/juniorssilvaa/app_provedor-webhook:${IMAGE_TAG:-latest}
     depends_on:
       - app-provedor-backend
     networks:
@@ -101,14 +101,34 @@ services:
       - "traefik.http.routers.app-provedor-webhook.rule=Host(`webhooks.niochat.com.br`)"
       - "traefik.http.routers.app-provedor-webhook.entrypoints=websecure"
       - "traefik.http.routers.app-provedor-webhook.tls.certresolver=letsencryptresolver"
-      - "traefik.http.routers.app-provedor-webhook.priority=10"
+      - "traefik.http.routers.app-provedor-webhook.priority=20"
       - "traefik.http.services.app-provedor-webhook.loadbalancer.server.port=8001"
+
+  # ===============================
+  # 🎨 FRONTEND (React/Next)
+  # ===============================
+  app-provedor-frontend:
+    image: ghcr.io/juniorssilvaa/app_provedor-frontend:${IMAGE_TAG:-latest}
+    networks:
+      - appNet
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.30'
+          memory: 256M
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.app-provedor-frontend.rule=Host(`app.niochat.com.br`)"
+      - "traefik.http.routers.app-provedor-frontend.entrypoints=websecure"
+      - "traefik.http.routers.app-provedor-frontend.tls.certresolver=letsencryptresolver"
+      - "traefik.http.services.app-provedor-frontend.loadbalancer.server.port=3000"
 
   # ===============================
   # ⏰ SCHEDULER (Processador de Notificações Agendadas)
   # ===============================
   app-provedor-scheduler:
-    image: ghcr.io/juniorssilvaa/app_provedor-backend:latest
+    image: ghcr.io/juniorssilvaa/app_provedor-backend:${IMAGE_TAG:-latest}
     depends_on:
       - postgres
       - app-provedor-backend
@@ -117,13 +137,13 @@ services:
     volumes:
       - app-provedor-media:/app/media
       - app-provedor-static:/app/staticfiles
-      # - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
+      - /opt/app_provedor/firebase-credentials.json:/app/service_account_key.json
     environment:
       SECRET_KEY: ${SECRET_KEY:-acK0Z6lOzI_g0tQhb_Ir9bisTC8dZQrTaoIPgBpmjqRzye1XaVsPBXgF2LbhkkbPPAU}
       DEBUG: ${DEBUG:-false}
       DATABASE_URL: postgresql://${POSTGRES_USER:-app_user}:${POSTGRES_PASSWORD:-SOMxcet2sQT5oJHFhUBStA}@postgres:5432/${POSTGRES_DB:-app_provedor_db}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
-      # FIREBASE_CREDENTIALS: /app/service_account_key.json
+      FIREBASE_CREDENTIALS: /app/service_account_key.json
     restart: always
     deploy:
       resources:
